[metadata]
name = darma_online
version = 1.0.0
author = Darpan Jain
author_email = darpanja@isi.edu
description = package for DARMA bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isi-nlp/isi_darma
project_urls =
    Bug Tracker = https://github.com/isi-nlp/isi_darma/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src